@@ -66,13 +66,15 @@ public class NoChannel extends StdCommand
 			}
 		}
 		if(channelNum<0)
-		for(int c=0;c<CMLib.channels().getNumChannels();c++)
 		{
-			final ChannelsLibrary.CMChannel chan=CMLib.channels().getChannel(c);
-			if(chan.name().toUpperCase().startsWith(channelName))
+			for(int c=0;c<CMLib.channels().getNumChannels();c++)
 			{
-				channelNum=c;
-				channelName=chan.name();
+				final ChannelsLibrary.CMChannel chan=CMLib.channels().getChannel(c);
+				if(chan.name().toUpperCase().startsWith(channelName))
+				{
+					channelNum=c;
+					channelName=chan.name();
+				}
 			}
 		}
 		if((channelNum<0)
@@ -81,6 +83,61 @@ public class NoChannel extends StdCommand
 			mob.tell(L("This channel is not available to you."));
 			return false;
 		}
+		long nochannelCompletes = 0;
+		if(commands.size()>0)
+		{
+			for(int i=0;i<commands.size();i++)
+			{
+				if("for".equalsIgnoreCase(commands.get(i)))
+				{
+					commands.remove(i);
+					final long wait=CMath.s_int(commands.get(i));
+					commands.remove(i);
+					final String multiplier=commands.get(i);
+					commands.remove(i);
+					final long timeMultiplier=CMLib.english().getMillisMultiplierByName(multiplier);
+					if((timeMultiplier<0)||(wait<=0))
+					{
+						mob.tell(L("I don't know how to nochannel for the next @x1 @x2; try `5 minutes` or something similar.",""+wait,multiplier));
+						return false;
+					}
+					nochannelCompletes=System.currentTimeMillis()+(wait * timeMultiplier)-1;
+				}
+			}
+		}
+		for(final Enumeration<ScriptingEngine> e=mob.scripts();e.hasMoreElements();)
+		{
+			final ScriptingEngine engine = e.nextElement();
+			if(engine.getScript().startsWith("#"+channelName.toUpperCase()+this))
+			{
+				mob.delScript(engine);
+				break;
+			}
+		}
+		if(nochannelCompletes > System.currentTimeMillis())
+		{
+			pstats.setChannelMask(pstats.getChannelMask()|(1<<channelNum));
+			final ScriptingEngine engine = (ScriptingEngine)CMClass.getCommon("DefaultScriptingEngine");
+			if(engine != null)
+			{
+				final StringBuilder script = new StringBuilder("");
+				script.append("#"+channelName.toUpperCase()+this+"\n");
+				final long remainMillis = (nochannelCompletes-System.currentTimeMillis());
+				final int ticks = (int)Math.round(CMath.div(remainMillis,CMProps.getTickMillis()));
+				script.append("DELAY_PROG "+ticks+" "+ticks+"\n");
+				script.append(channelName.toUpperCase()+"\n");
+				script.append("MPSCRIPT $i DELETE *");
+				script.append("~\n");
+				engine.setScript(script.toString());
+				mob.addScript(engine);
+				final String time = CMLib.english().stringifyElapsedTimeOrTicks(remainMillis, 0);
+				mob.tell(L("The @x1 channel has been turned off for @x2.  Use `@x3` to turn it back on."
+						,channelName,time,channelName.toUpperCase()));
+			}
+			else
+				mob.tell(L("The @x1 channel has been turned off.  Use `@x2` to turn it back on.",channelName,channelName.toUpperCase()));
+		}
+		else
 		if(!CMath.isSet(pstats.getChannelMask(),channelNum))
 		{
 			pstats.setChannelMask(pstats.getChannelMask()|(1<<channelNum));
