@@ -559,10 +559,13 @@ More to come!
 
 NOCHANNEL=\
 Command : NO[CHANNEL]\n\r\
-Usage   : NO[CHANNEL]\n\r\
+Usage   : NO[CHANNEL] (FOR [TIME])\n\r\
 Example : no[channel]\n\r\
+Example : no[channel] for 20 seconds\n\r\
 Short(s): \n\r\
-This command turns off the [CHANNEL] channel.  See [CHANNEL] for more info.
+This command turns off the [CHANNEL] channel.  You can also \
+specify an amount of time to keep the channel turned off, which \
+will be rounded to the nearest tick.  See [CHANNEL] for more info.
 
 CHANNEL=\
 Command : [CHANNEL]\n\r\
