@@ -3,6 +3,7 @@
   2. CoffeeMud now integrates with LLMs via LangChain4J.  See installation guide.
   3. New admin command: LLM, for chatting with your AI.
   4. Immunities and TemporaryImmunity can now include effects/behaviors.
+  5. NOCHANNEL can now be given an ellapsed time.
 
 # Build 5.10.5 Release 07/12/2025
   *  DATABASE CHANGED! (new CMCDAC table)
